# smartthings-vehicle-ha

./: .gitignore  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
custom_components/: __init__.py
custom_components/smartthings_vehicle/: __init__.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  diagnostics_data.py  hvac.py  lock.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  vehicle.py
custom_components/smartthings_vehicle/translations/: ko.json
tests/: test_command_convergence.py  test_diagnostics.py  test_entity_cleanup.py  test_entity_ids.py  test_hvac_ui_controls.py  test_korean_interface.py  test_token_refresh.py  test_vehicle.py  test_vehicle_controls.py  test_vehicle_discovery.py
