[project]
name = "smartthings-vehicle-ha"
version = "0.1.0"
description = "Home Assistant companion integration for SmartThings Hyundai/Kia vehicle devices"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "gomeng-dev" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
