[project]
name = "smartthings-vehicle-ha"
version = "0.7.0"
description = "한국 SmartThings 현대자동차·기아·제네시스 차량용 Home Assistant 커스텀 통합"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "gomeng-dev" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
